--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><img src="images/logo.jpg" height="30px" width="30px"><a href="index.html"> SJCET,Palai</span></a></h1>
+					<h1 id="logo"><img src="images/logo.jpg" height="30px" width="30px"><a href="index.html">Spandanam</span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
@@ -32,14 +32,9 @@
 										<div class="inner">
 
 						<header>
-							<h2>Spandanam</h2>
+						 <img src="images/logo.jpg" width="500px" height="400px">
 						</header>
-						<p>Sample text here</p>
-						<footer>
-							<ul class="buttons vertical">
-								<li><a href="#main" class="button fit scrolly">Learn More</a></li>
-							</ul>
-						</footer>
+						<p>St.Joseph's College of Enggineering and Technology, Palai</p>
 
 					</div>
 
