--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><img src="images/logo.jpg" height="30px" width="30px"><a href="index.html">Spandanam</span></a></h1>
+					<h1 id="logo">Spandanam</h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
@@ -34,7 +34,7 @@
 						<header>
 						 <img src="images/logo.jpg" width="500px" height="400px">
 						</header>
-						<p>St.Joseph's College of Enggineering and Technology, Palai</p>
+						<p>St.Joseph's College of Engineering and Technology, Palai</p>
 
 					</div>
 
