--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li><a href="#main">About Us</a></li>
-							<li><a href="#">Activities</a></li>
+							<li><a href="#">Activities and</a></li>
 							<li><a href="#" class="button special">Join Us</a></li>
 						</ul>
-					</nav>
+					</nav>d
 				</header>
 
 			<!-- Banner -->
