--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 					<header>
 						<h2>Want to join us?</h2>
-						<p>Want to join us as we spread happiness? Join Spandanam as a volunteer and make a difference in your community.</p>
+						<p>Want to join and spread happiness? Join Spandanam as a volunteer and make a difference in your community. We always welcome new volunteers and would be happy to hear from you.</p>
 					</header>
 					<footer>
 						<ul class="buttons">
