--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li><a href="#main">About Us</a></li>
-							<li><a href="#">Activities and</a></li>
+							<li><a href="#activities">Activities</a></li>
+							<li><a href="cta2">Contact Us</a></li>
 							<li><a href="#" class="button special">Join Us</a></li>
 						</ul>
 					</nav>d
@@ -120,7 +121,7 @@
 						</section>
 
 					<!-- Three -->
-						<section class="wrapper style3 container special">
+						<section class="wrapper style3 container special" id="activities">
 
 							<header class="major">
 								<h2>Activities</h2>
