--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<li><a href="#main">About Us</a></li>
 							<li><a href="#activities">Activities</a></li>
 							<li><a href="cta2">Contact Us</a></li>
-							<li><a href="#" class="button special">Join Us</a></li>
+							<li><a href="#join" class="button special">Join Us</a></li>
 						</ul>
 					</nav>d
 				</header>
@@ -197,7 +197,7 @@
 					</header>
 					<footer>
 						<ul class="buttons">
-							<li><a href="#" class="button special">Join Us</a></li>
+							<li><a href="#" class="button special" id="join">Join Us</a></li>
 						</ul>
 					</footer>
 
@@ -211,14 +211,14 @@
 						</header>
 						<p>Spandanam
 						<br/>St.Joseph's College of Engineering and Technology
-						<br/>Pala, Bharananganam Pravithanam Rd
+						<br/>Bharananganam Pravithanam Rd
 						<br/>Choondacherry, Kerala 686579
             <br/>Phone: 04822 239 301
 						<br/><br/>
 						Staff Co-ordinator : Mr. Babu Sankar
-						<br/>Phone :
+						<br/>Phone : +91
 						<br/>	President : Mr. Amal Sebastian
-						<br/>Phone :
+						<br/>Phone : +91
 
 
 					</p>
