--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li><a href="#main">About Us</a></li>
 							<li><a href="#activities">Activities</a></li>
-							<li><a href="cta2">Contact Us</a></li>
+							<li><a href="#cta2">Contact Us</a></li>
 							<li><a href="#join" class="button special">Join Us</a></li>
 						</ul>
 					</nav>d
