--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<li><a href="#main">About Us</a></li>
 							<li><a href="#activities">Activities</a></li>
 							<li><a href="#cta2">Contact Us</a></li>
-							<li><a href="#join" class="button special">Join Us</a></li>
+							<li><a href="#cta" class="button special">Join Us</a></li>
 						</ul>
 					</nav>d
 				</header>
@@ -240,8 +240,7 @@
 					<ul class="copyright">
 						<li>&copy; Spandanam 2015</li><br/>
 						<li><a href="https://www.sjcetpalai.ac.in">St.Joseph's College of Engineering and Technology</a></li><br/>
-					  <li>Choondacherry P.O, Palai </li><br/>
-						<li>Kottayam 686579</li>
+
 
 				</footer>
 
